--- a/index.html
+++ b/index.html
@@ -118,101 +118,275 @@ Your browser does not support the video tag.
 
 
 
-<section class="section second col-12" id="container-2">
-<span class="top"></span>
+        <section class="col-12" id="container-2">
+        <span class="top"></span>
+
+
+        <div class="reveal-1 scale item copy-container col-12 col-lg-8 col-xl-5 offset-lg-2 offset-xl-1"  data-anijs="if: scroll, on: window, do: rollIn animated, before: scrollReveal; if: load, on: window, do: rubberBand animated;">
+
+        <!-- VIDEO - DO NOT DELETE
+          <video controls class="col-12 d-none d-lg-block">
+        <source src="assets/videos/home-desktop.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+        </video>
+        -->
+
+        <img src="assets/images/video-placeholder.png" alt="#" class="col-12">
+          </div>
+
+        <div class="reveal-2 copy-container col-12 col-lg-6">
+            <h2 class="align-left col-10 col-xl-10 offset-1">EXPECT
+          <br>
+          <span class="green-underline">MORE</span></h2>
+
+
+
+        <p class="body-copy reveal-2 col-10 col-lg-8 offset-1 offset-lg-1">
+        We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
+        </p>
+
+
+
+        <div class="links-container reveal-3 col-10 offset-1">
+          <a href="who-we-are.html" class="link-outline-2 col-12 col-lg-10">
+            <p class="col-10">CAREERS
+              <br>
+        <span class="fancy-text">Make Your Move</span>
+          </p>
+          <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2 arrow">
+          </a>
+
+          <a href="what-we-do.html" class="col-12  col-lg-10 border-bottom link-outline-2">
+            <p class="col-10">DISCOVER
+              <br>
+        <span class="fancy-text">Dreams On Demand</span>
+          </p>
+          <img src="assets/arrow.svg" alt="arrow pointing right" class="arrow col-2">
+            </a>
+
+        </div>
+        </div>
+        </section>
+
+
+
+
+        <section class="col-12 slide-right" id="half-screen">
+
+        <h2 class="reveal-1 align-right col-10 col-lg-4 col-xl-5 offset-1 offset-xl-1">DRIVE
+        <br>
+        <span class="turquoise-underline align-right">DEFINES US</span></h2>
+
+
+          <div class="copy-container col-12 col-lg-5">
+        <p class="reveal-2 col-10 col-lg-12 col-xl-10 offset-1 offset-lg-0 offset-lg-1">
+        We’ve revolutionized an industry with radical market-driving business ideas and investment strategies. We are market makers. We risk more than others think is safe.  We care more than others think is wise. We expect more than others think is possible.
+        </p>
+        </div>
+
+        <div class="background">
+        </div>
+
+        </section>
+
+
+
+
+        <section class="col-10 col-xl-10 offset-1" id="glance">
+
+        <div class="number-container number-reveal-1 col-12 col-lg-4">
+        <h2>5
+          <br>
+        <span class="h2-line2 number-reveal-2 orange-underline">Million</span></h2>
+          <p class="number-reveal-2">Total Square Feet of Assets</p>
+        </div>
+
+        <div class="number-container number-reveal-1 col-12 col-lg-4">
+          <h2><span class="superscript">$</span>300
+            <br>
+        <span class="h2-line2 number-reveal-2 green-underline">Million</span>
+          </h2>
+          <p class="number-reveal-2">In New Investments</p>
+        </div>
+
+        <div class="number-container reveal-1 col-12 col-lg-4">
+            <h2 class="number-reveal-1">4
+            <br>
+          <span class="h2-line2 number-reveal-2 turquoise-underline">Projects</span>
+        </h2>
+        <p class="number-reveal-2">Currently In Development</p>
+        </div>
+
+        <div class="number-container col-12 col-lg-4 offset-lg-2">
+            <h2 class="number-reveal-3">21
+            <br>
+        <span class="h2-line2 number-reveal-4 turquoise-underline">Investors</span>
+          </h2>
+          <p class="number-reveal-4">Driving Market Growth</p>
+        </div>
+
+        <div class="number-container col-12 col-lg-4">
+            <h2 class="number-reveal-3">59
+            <br>
+        <span class="h2-line2 number-reveal-4 orange-underline">People</span>
+          </h2>
+          <p class="number-reveal-4">Delivering Luxury Experience</p>
+        </div>
+
+        </section>
 
 
 
 
 
-  <h2 class="is-animated col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATED
-<br>
-<span class="green-underline">EXPERIENCE</span></h2>
 
-<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
-<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
+<section class="col-12" id="portfolio">
+  <div class="col-12" id="press">
+<p class="small-headline col-10 offset-1">
+  DISCOVER MORE
 </p>
-  </div>
 
-<div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
-  <a href="who-we-are.html" class="link-outline-2 col-12"><p class="col-10">WHO IS BURNS SCALO REAL ESTATE</p>
-  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
-  </a>
+<ul class="filters-2 col-10 col-lg-8 offset-1 float-left float-left">
+        <li><a class="filter" data-filter=".press">PRESS</a></li>
+        <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
+        <li><a class="filter" data-filter=".properties">PROPERTIES</a></li>
 
-  <a href="what-we-do.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
-<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
-    </a>
+      </ul>
+
+
+
+<ul class="containMix portfolio-container col-10 offset-1 float-left">
+
+
+<!-- 1-9 -->
+
+<li class="press mix container-p col-12 col-lg-4 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="press-article-1.html">
+    <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/portfolio/visionedit.png" alt="#">
 </div>
-
-</section>
-
-
-
-<section class="col-12 p-0 d-none d-xl-block">
-<embed class="col-12 p-0" src="push-1.html" id="cover-1">
-</section>
-
-
-<section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
-  <img src="assets/images/push-1.png" alt="#" class="col-12">
-<div class="col-10 col-md-8 offset-1 offset-md-2">
-  <h2 class="col-12">
-PUTTING<br><span class="turquoise-underline">PEOPLE FIRST</span>
-    </h2>
-
-    <p class="col-12">
-Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
-  </p>
-</div>
-
-
-
-
-</section>
-
-
-<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
-
-<p class="small-headline col-10 offset-2 offset-lg-0">
-FEATURED PROPERTIES
-</p>
-
-<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-    <a href="portfolio-riviera.html">
-      <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/riviera.png" alt="Outside view of the Riviera property.">
-  </div>
-<h3>THE RIVIERA</h3>
+<h3>Corridors of Opportunity: What's next for the Strip District?</h3>
+<p>Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
 </a>
 </div>
-</div>
+</li>
 
 
-<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
+<li class="press mix container-p col-12 col-lg-4 float-left">
 <div class="portfolio-list col-12 float-left">
-  <a href="#">
+<a href="press-article-2.html">
+  <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/press/jim.png" alt="#">
+</div>
+<h3>Scalo's Viewpoint: The forces Covid can't stop</h3>
+<p>Feb 3, 2021, 7:54am EST | Jim Scalo</p>
+</a>
+</div>
+</li>
+
+<li class="press mix container-p col-12 col-lg-4 float-left">
+<div class="portfolio-list col-12 float-left">
+<a href="press-article-3.html">
+  <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/press/diamond-ridge.png" alt="#">
+</div>
+<h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
+<p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
+</a>
+</div>
+</li>
+
+
+
+
+
+              <li class="insights mix container-p col-12 col-lg-4 float-left">
+                <div class="portfolio-list col-12 float-left">
+                  <a href="insights-article-0.html">
+                    <div class="col-12 p-0 portfolio-image-container">
+                <img src="assets/images/insights/article-0/diamond-ridge.png" alt="#">
+                </div>
+              <h3>New Office Wins (NOW)</h3>
+              <p>Feb 25, 2021, 12:42pm EST</p>
+              </a>
+              </div>
+            </li>
+
+
+            <li class="insights mix container-p col-12 col-lg-4 float-left">
+              <div class="portfolio-list col-12 float-left">
+                <a href="insights-article-1.html">
+                  <div class="col-12 p-0 portfolio-image-container">
+              <img src="assets/images/insights/article-1/office-cover.png" alt="#">
+              </div>
+            <h3>What you pay in rent doesn't matter</h3>
+            <p>Feb 25, 2021, 12:42pm EST</p>
+            </a>
+            </div>
+          </li>
+
+
+            <li class="insights mix container-p col-12 col-lg-4 float-left">
+            <div class="portfolio-list col-12 float-left">
+              <a href="insights-article-2.html">
+                <div class="col-12 p-0 portfolio-image-container">
+            <img src="assets/images/insights/article-2/ammenities-cover.png" alt="#">
+            </div>
+            <h3>Workplace amenities are not entitlements</h3>
+            <p>Feb 3, 2021, 7:54am EST</p>
+            </a>
+            </div>
+          </li>
+
+
+
+
+<li class="properties mix current container-p col-12 col-lg-4 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="portfolio-riviera.html">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="Outside view of the Vision property.">
+<img src="assets/images/portfolio/riviera.png" alt="#">
+</div>
+<h3>THE RIVIERA</h3>
+<p>South Oakland</p>
+</a>
+</div>
+</li>
+
+
+
+<li class="properties current mix container-p col-12 col-lg-4 float-left">
+<div class="portfolio-list col-12 float-left">
+  <a href="portfolio-vision.html">
+    <div class="col-12 p-0 portfolio-image-container">
+<img src="assets/images/portfolio/visionedit.png" alt="#">
 </div>
 <h3>THE VISION</h3>
+<p>Strip District</p>
 </a>
 </div>
-</div>
+</li>
 
-<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
+
+
+
+<li class="properties current mix container-p col-12 col-md-4 col-lg-4 float-left">
 <div class="portfolio-list col-12 float-left">
-  <a href="#">
+  <a href="portfolio-diamond-ridge.html">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="Digital rendering of the Diamond Ridge property exterior">
+<img src="assets/images/portfolio/diamond.png" alt="#">
 </div>
 <h3>DIAMOND RIDGE</h3>
+<p>Moon Township</p>
 </a>
 </div>
+</li>
+
+</ul>
+
 </div>
-
-
 </section>
 
 
@@ -235,47 +409,18 @@ FEATURED PROPERTIES
 
   </footer>
 
-
-
-<section class="col-12 d-xl-none">
-        <footer class="mobile-footer col-12">
-
-
-
-            <ul class="col-10 offset-1">
-              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
-              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
-              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
-              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
-              <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
-
-              </ul>
-
-              <ul class="social-media-list col-4 offset-4">
-                <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
-                <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
-                </ul>
-
-          </footer>
-        </section>
-
         </div><!-- CLOSES SCROLL CONTAINER -->
 
-<!-- DROPDOWN MENU SCRIPT
-<script>
-          function myFunction() {
-  var x = document.getElementById("nav");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
-</script>
--->
 
 
 
+
+
+
+        <script src="jquery-3.2.1.min.js"></script>
+        <!--<script src="scrollreveal.min.js"></script>-->
+        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
 
 
 <script>
@@ -296,34 +441,105 @@ function subNav() {
 <script>
 function subNav1() {
    var element = document.getElementById("subNavMobile1");
-   element.classList.toggle("display-toggle-subnav1");
-}
+   element.classList.toggle("display-toggle-subnav1");}
 </script>
-<!--
 
-<script>
-function subNav() {
-  var x = document.getElementById("subNavMobile");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
--->
 
-<!-- END DROPDOWN MENU SCRIPT -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+            <script>
+            ScrollReveal().reveal('.reveal-1', {
+            reset: true} );
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    -->
+ScrollReveal().reveal('.reveal-1', { delay: 250 });
+            ScrollReveal().reveal('.reveal-2', { delay: 500,
+            reset: 'true',});
+
+            ScrollReveal().reveal('.reveal-3', {
+              delay: 1000,
+              reset: 'true',});
+
+
+            ScrollReveal().reveal('.reveal-4', { delay: 1500,
+            reset: 'true',});
+
+            ScrollReveal().reveal('.scale', {
+              reset: true,
+              scale: .5,
+              origin: 'left',
+              opacity: 0,
+            })
+
+
+
+
+            ScrollReveal().reveal('.number-reveal-1', {
+              reset: 'true',
+              scale: 0,
+              duration: 1000,});
+
+
+              ScrollReveal().reveal('.number-reveal-2', {
+                delay: 500,
+                reset: 'true',
+                scale: 0,
+                duration: 1000,});
+
+
+                ScrollReveal().reveal('.number-reveal-3', {
+
+                  reset: 'true',
+                  scale: 0,
+                  duration: 1000,});
+
+                  ScrollReveal().reveal('.number-reveal-4', {
+                    delay: 500,
+                    reset: 'true',
+                    scale: 0,
+                    duration: 1000,});
+
+
+
+
+
+            ScrollReveal().reveal('.scale-2', {
+              delay: 2500,
+              reset: true,
+              scale: .5,
+              origin: 'left',
+              opacity: 0,
+            })
+
+            ScrollReveal().reveal('.slide-right', {
+              reset: true,
+              distance: '150%',
+              origin: 'right',
+
+            })
+          </script>
+
+
+
+          <script src="js/jquery.2.min.js"></script>
+          <script src="js/jquery.mixitup.min.js"></script>
+          <script>
+
+              $('.containMix').mixItUp();
+          </script>
+
+
+
+          <script>
+                    $(function(){
+                      $('#portfolio').mixItUp({
+                        load: {
+                          filter: '.press'
+                        }
+                      });
+                    });
+          </script>
+
+
   </body>
 </html>
