--- a/press.html
+++ b/press.html
@@ -96,7 +96,7 @@
 
 
 
-              <ul class="filters col-12 col-lg-8 offset-lg-1 float-left float-left">
+              <ul class="filters col-10 col-lg-8 offset-1 float-left float-left">
                       <li><a href="#" class="filter" data-filter="all">ALL</a></li>
                       <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
 
@@ -104,13 +104,13 @@
 
 
 
-            <ul class="containMix portfolio-container col-12 col-md-10 offset-md-1 float-left" id="press">
+            <ul class="containMix portfolio-container col-10 offset-1 float-left" id="press">
 
 
 <!-- 1-9 -->
 
 
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south mix container-p col-12 col-md-6 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="press-article-1.html">
                   <div class="col-12 p-0 portfolio-image-container">
@@ -123,7 +123,7 @@
           </li>
 
 
-            <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="west mix container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-2.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -135,7 +135,7 @@
             </div>
           </li>
 
-            <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="west mix container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-3.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -150,7 +150,7 @@
 
 
 
-            <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="west current mix container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-4.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -162,7 +162,7 @@
             </div>
           </li>
 
-            <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south current mix container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-5.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -174,7 +174,7 @@
             </div>
           </li>
 
-            <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="east mix current container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-6.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -186,7 +186,7 @@
             </div>
           </li>
 
-            <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="central current mix container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-7.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -198,7 +198,7 @@
             </div>
           </li>
 
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="south mix container-p col-12 col-md-6 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="press-article-8.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -211,7 +211,7 @@
           </li>
 
 
-          <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+          <li class="south mix container-p col-12 col-md-6 col-lg-4 float-left">
           <div class="portfolio-list col-12 float-left">
             <a href="press-article-9.html">
               <div class="col-12 p-0 portfolio-image-container">
@@ -232,7 +232,7 @@
 
 
 
-        <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="south mix container-p col-12 col-md-6 col-lg-4 float-left">
           <div class="portfolio-list col-12 float-left">
             <a href="press-article-10.html">
               <div class="col-12 p-0 portfolio-image-container">
@@ -245,7 +245,7 @@
       </li>
 
 
-        <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="west mix container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-11.html">
             <div class="col-12 p-0 portfolio-image-container">
@@ -257,7 +257,7 @@
         </div>
       </li>
 
-        <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="west mix container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-12.html">
             <div class="col-12 p-0 portfolio-image-container">
@@ -272,7 +272,7 @@
 
 
 
-        <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="west current mix container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-13.html">
             <div class="col-12 p-0 portfolio-image-container">
@@ -284,7 +284,7 @@
         </div>
       </li>
 
-        <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="south current mix container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-14.html">
             <div class="col-12 p-0 portfolio-image-container">
@@ -296,7 +296,7 @@
         </div>
       </li>
 
-        <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="east mix current container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-15.html">
             <div class="col-12 p-0 portfolio-image-container">
@@ -308,7 +308,7 @@
         </div>
       </li>
 
-        <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="central current mix container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-16.html">
             <div class="col-12 p-0 portfolio-image-container">
@@ -320,7 +320,7 @@
         </div>
       </li>
 
-        <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <li class="south mix container-p col-12 col-md-6 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
           <a href="press-article-17.html">
             <div class="col-12 p-0 portfolio-image-container">
