--- a/old-index.html
+++ b/old-index.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="css/fonts/stylesheet.css" type="text/css" rel="stylesheet">
-    <title>Burns Scalo Real Estate</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -18,6 +17,14 @@
 <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+        <script src="js/animate.js"></script>
+
+
+
+
+    <title>Burns Scalo Real Estate</title>
   </head>
   <body>
 
@@ -34,6 +41,7 @@
       </div>
 
       </header>
+
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
@@ -58,7 +66,7 @@
 </li>
 
 
-          <li class="nav-item-2 d-none d-xl-block" id="active"><a href="what-we-do.html">WHAT WE DO</a>
+          <li class="nav-item-2 d-none d-xl-block"><a href="what-we-do.html">WHAT WE DO</a>
             <ul id="subnav">
             <li><a href="brokerage.html">BROKERAGE</a></li>
             <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
@@ -87,110 +95,96 @@
           </nav>
 
 
-<div class="scroll-container col-12 p-0" id="what-we-do">
+
+
+
+
+<div class="scroll-container col-12 p-0">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-
         <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
-<source src="assets/videos/what-we-do-desktop.mp4" type="video/mp4">
+<source src="assets/videos/home-desktop.mp4" type="video/mp4">
 <source src="movie.ogg" type="video/ogg">
 Your browser does not support the video tag.
 </video>
 
-<video muted autoplay playsinline class="video-background d-lg-none">
-<source src="assets/videos/what-we-do-mobile.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+<div class="video-background d-lg-none">
+<img src="assets/images/home-background.png" alt="#">
+</div>
 
-
-
-
-<h1 class="col-10 offset-1"><span class="delay-1">MORE</span><br><span class="delay-2">OF WHAT</span><br><span class="orange-underline delay-3">YOU LOVE</span></h1>
-
+<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces</span> <span class="delay-3">that</span><br><span class="green-underline delay-4">shape lives</span></h1>
         </section>
 
 
 
-        <section class="col-12" id="container-2">
-        <span class="top"></span>
+<section class="section second col-12" id="container-2">
+<span class="top"></span>
 
 
 
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">DELIVERING
-    <br>
-<span class="green-underline">LUXURY</span></h2>
+
+
+  <h2 class="is-animated col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATED
+<br>
+<span class="green-underline">EXPERIENCE</span></h2>
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-We don’t <span class="italic">sell</span> a luxury product — we <span class="italic">deliver</span> a luxury experience. It’s not just about what’s new, but about what matters. Through the design, development, brokerage, and management of world-class workplaces, we deliver a new form luxury and a culture of inclusivity that drives today’s businesses forward.
+We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
 </p>
+  </div>
 
-</div>
+<div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
+  <a href="who-we-are.html" class="link-outline-2 col-12"><p class="col-10">WHO IS BURNS SCALO REAL ESTATE</p>
+  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
+  </a>
 
-  <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
-
-  <a href="brokerage.html" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
-<img src="assets/arrow.svg" alt="brokerage.html" class="col-2">
-</a>
-
-    <a href="development.html" class="col-12 link-outline-2"><p class="col-10">DEVELOPMENT</p>
-<img src="assets/arrow.svg" alt="development.html" class="col-2">
+  <a href="what-we-do.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
+<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
     </a>
-
-  <a href="management.html" class="col-12 border-bottom link-outline-2"><p class="col-10">MANAGEMENT</p>
-<img src="assets/arrow.svg" alt="management.html" class="col-2">
-    </a>
-
-
-
 </div>
 
 </section>
 
-<section class="col-12 p-0 d-none d-lg-block">
-<embed class="col-12 p-0" src="push-3.html" id="cover-1">
+
+
+<section class="col-12 p-0 d-none d-xl-block">
+<embed class="col-12 p-0" src="push-1.html" id="cover-1">
 </section>
-
-
 
 
 <section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
   <img src="assets/images/push-1.png" alt="#" class="col-12">
 <div class="col-10 col-md-8 offset-1 offset-md-2">
   <h2 class="col-12">
-YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
+PUTTING<br><span class="turquoise-underline">PEOPLE FIRST</span>
     </h2>
 
     <p class="col-12">
-      Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
-
-</p>
+Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
+  </p>
 </div>
+
+
+
 
 </section>
 
 
+<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
 
-
-
-
-
-
-<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="featured-projects">
-
-  <p class="small-headline col-6 offset-1 offset-md-3 offset-lg-0">
-  SUCCESS STORIES
-  </p>
+<p class="small-headline col-10 offset-1 col-md-6 offset-md-3 offset-lg-0">
+FEATURED PROPERTIES
+</p>
 
 <div class="container-p col-10 col-md-6 col-lg-4 offset-1 offset-md-3 offset-lg-0 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="#">
+    <a href="portfolio-riviera.html">
       <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/testimonials/rice.png" alt="#">
+  <img src="assets/images/portfolio/riviera.png" alt="Outside view of the Riviera property.">
   </div>
-<h3>Toby Rice</h3>
+<h3>THE RIVIERA</h3>
 </a>
 </div>
 </div>
@@ -200,9 +194,9 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/testimonials/waldron.png" alt="#">
+<img src="assets/images/portfolio/visionedit.png" alt="Outside view of the Vision property.">
 </div>
-<h3>John Waldron</h3>
+<h3>THE VISION</h3>
 </a>
 </div>
 </div>
@@ -211,16 +205,15 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
 <div class="portfolio-list col-12 float-left">
   <a href="#">
     <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/testimonials/fleck.png" alt="#">
+<img src="assets/images/portfolio/diamond.png" alt="Digital rendering of the Diamond Ridge property exterior">
 </div>
-<h3>Steve Fleck</h3>
+<h3>DIAMOND RIDGE</h3>
 </a>
 </div>
 </div>
 
 
 </section>
-
 
 
 <footer class="col-12 d-none d-xl-block">
@@ -266,12 +259,7 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
           </footer>
         </section>
 
-
-
-
-
- </div>
-
+        </div><!-- CLOSES SCROLL CONTAINER -->
 
 <!-- DROPDOWN MENU SCRIPT
 <script>
@@ -285,6 +273,10 @@ YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
 }
 </script>
 -->
+
+
+
+
 
 <script>
 function myFunction() {
@@ -307,6 +299,19 @@ function subNav1() {
    element.classList.toggle("display-toggle-subnav1");
 }
 </script>
+<!--
+
+<script>
+function subNav() {
+  var x = document.getElementById("subNavMobile");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
+-->
 
 <!-- END DROPDOWN MENU SCRIPT -->
 
