--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ Your browser does not support the video tag.
   DISCOVER MORE
 </p>
 
+
+      <div class="container-mixitup col-12 p-0">
 <ul class="filters-2 col-10 col-lg-8 offset-1 float-left float-left">
         <li><a class="filter" data-filter=".press">PRESS</a></li>
         <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
@@ -343,7 +345,7 @@ Your browser does not support the video tag.
 
 
 
-<li class="properties mix current container-p col-12 col-lg-4 float-left">
+<li class="properties mix container-p col-12 col-lg-4 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="portfolio-riviera.html">
     <div class="col-12 p-0 portfolio-image-container">
@@ -357,7 +359,7 @@ Your browser does not support the video tag.
 
 
 
-<li class="properties current mix container-p col-12 col-lg-4 float-left">
+<li class="properties mix container-p col-12 col-lg-4 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="portfolio-vision.html">
     <div class="col-12 p-0 portfolio-image-container">
@@ -372,7 +374,7 @@ Your browser does not support the video tag.
 
 
 
-<li class="properties current mix container-p col-12 col-md-4 col-lg-4 float-left">
+<li class="properties mix container-p col-12 col-md-4 col-lg-4 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="portfolio-diamond-ridge.html">
     <div class="col-12 p-0 portfolio-image-container">
@@ -385,7 +387,7 @@ Your browser does not support the video tag.
 </li>
 
 </ul>
-
+</div>
 </div>
 </section>
 
