--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@ Your browser does not support the video tag.
 
 
 <section class="col-12" id="portfolio">
-  <div class="col-12" id="press">
+  <div class="col-12 container" id="press">
 <p class="small-headline col-10 offset-1">
   DISCOVER MORE
 </p>
 
 
-      <div class="container-mixitup col-12 p-0">
+      <div class="container-mixitup  col-12 p-0">
 <ul class="filters-2 col-10 col-lg-8 offset-1 float-left float-left">
         <li><a class="filter" data-filter=".press">PRESS</a></li>
         <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
@@ -541,6 +541,9 @@ ScrollReveal().reveal('.reveal-1', { delay: 250 });
                       });
                     });
           </script>
+
+
+
 
 
   </body>
