--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Your browser does not support the video tag.
 
 
       <div class="container-mixitup  col-12 p-0">
-<ul class="filters-2 col-10 col-lg-8 offset-1 float-left float-left">
+<ul class="filters-2 col-12 col-lg-8 offset-md-1  float-left float-left">
         <li><a class="filter" data-filter=".press">PRESS</a></li>
         <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
         <li><a class="filter" data-filter=".properties">PROPERTIES</a></li>
