--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@ Your browser does not support the video tag.
 
 <section class="col-12" id="portfolio">
   <div class="col-12 container" id="press">
-<p class="small-headline col-10 offset-1">
+<p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
   DISCOVER MORE
 </p>
 
 
       <div class="container-mixitup  col-12 p-0">
-<ul class="filters-2 col-12 col-lg-8 offset-md-1  float-left float-left">
+<ul class="filters-2 col-12 col-md-12 col-lg-8 offset-md-0 offset-lg-1 float-left float-left">
         <li><a class="filter" data-filter=".press">PRESS</a></li>
         <li><a class="filter" data-filter=".insights">INSIGHTS</a></li>
         <li><a class="filter" data-filter=".properties">PROPERTIES</a></li>
@@ -258,12 +258,12 @@ Your browser does not support the video tag.
 
 
 
-<ul class="containMix portfolio-container col-10 offset-1 float-left">
+<ul class="containMix portfolio-container col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1 float-left">
 
 
 <!-- 1-9 -->
 
-<li class="press mix container-p col-12 col-lg-4 float-left">
+<li class="press mix container-p col-12 col-md-4 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="press-article-1.html">
     <div class="col-12 p-0 portfolio-image-container">
@@ -276,7 +276,7 @@ Your browser does not support the video tag.
 </li>
 
 
-<li class="press mix container-p col-12 col-lg-4 float-left">
+<li class="press mix container-p col-12 col-md-4 float-left">
 <div class="portfolio-list col-12 float-left">
 <a href="press-article-2.html">
   <div class="col-12 p-0 portfolio-image-container">
@@ -288,7 +288,7 @@ Your browser does not support the video tag.
 </div>
 </li>
 
-<li class="press mix container-p col-12 col-lg-4 float-left">
+<li class="press mix container-p col-12 col-md-4 float-left">
 <div class="portfolio-list col-12 float-left">
 <a href="press-article-3.html">
   <div class="col-12 p-0 portfolio-image-container">
@@ -304,7 +304,7 @@ Your browser does not support the video tag.
 
 
 
-              <li class="insights mix container-p col-12 col-lg-4 float-left">
+              <li class="insights mix container-p col-12 col-md-4 float-left">
                 <div class="portfolio-list col-12 float-left">
                   <a href="insights-article-0.html">
                     <div class="col-12 p-0 portfolio-image-container">
@@ -317,7 +317,7 @@ Your browser does not support the video tag.
             </li>
 
 
-            <li class="insights mix container-p col-12 col-lg-4 float-left">
+            <li class="insights mix container-p col-12 col-md-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="insights-article-1.html">
                   <div class="col-12 p-0 portfolio-image-container">
@@ -330,7 +330,7 @@ Your browser does not support the video tag.
           </li>
 
 
-            <li class="insights mix container-p col-12 col-lg-4 float-left">
+            <li class="insights mix container-p col-12 col-md-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="insights-article-2.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -345,7 +345,7 @@ Your browser does not support the video tag.
 
 
 
-<li class="properties mix container-p col-12 col-lg-4 float-left">
+<li class="properties mix container-p col-12 col-md-4 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="portfolio-riviera.html">
     <div class="col-12 p-0 portfolio-image-container">
@@ -359,7 +359,7 @@ Your browser does not support the video tag.
 
 
 
-<li class="properties mix container-p col-12 col-lg-4 float-left">
+<li class="properties mix container-p col-12 col-md-4 float-left">
 <div class="portfolio-list col-12 float-left">
   <a href="portfolio-vision.html">
     <div class="col-12 p-0 portfolio-image-container">
@@ -410,6 +410,30 @@ Your browser does not support the video tag.
       </ul>
 
   </footer>
+
+
+
+<section class="col-12 d-xl-none">
+        <footer class="mobile-footer col-12">
+
+
+
+            <ul class="col-10 offset-1">
+              <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PROMOTIONS</a></li>
+              <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+              <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
+              <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
+
+              </ul>
+
+              <ul class="social-media-list col-4 offset-4">
+                <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
+                <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
+                </ul>
+
+          </footer>
+        </section>
 
         </div><!-- CLOSES SCROLL CONTAINER -->
 
