--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Your browser does not support the video tag.
 
 
 
-<section class="col-12" id="portfolio">
+<div class="col-12" id="portfolio">
   <div class="col-12 container" id="press">
 <p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
   DISCOVER MORE
@@ -389,7 +389,7 @@ Your browser does not support the video tag.
 </ul>
 </div>
 </div>
-</section>
+</div>
 
 
 <footer class="col-12 d-none d-xl-block">
