--- a/press.html
+++ b/press.html
@@ -90,7 +90,7 @@
 
 
 
-            <div class="col-12 p-0" id="portfolio">
+            <div class="col-12 p-0" id="articles">
 
               <div class="container-mixitup col-12 p-0">
 
