--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ Your browser does not support the video tag.
 
 
 
-<div class="col-12" id="portfolio">
+<div class="col-12 d-none" id="portfolio">
   <div class="col-12 container" id="press">
 <p class="small-headline col-10 col-md-12 col-lg-10 offset-1 offset-md-0 offset-lg-1">
   DISCOVER MORE
