--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
 
 
-            <div class="col-12 p-0" id="portfolio-page">
+            <div class="col-12" id="portfolio-page">
 
               <div class="container-mixitup col-12 p-0">
 
