--- a/press-article-1.html
+++ b/press-article-1.html
@@ -115,7 +115,7 @@
                           <li class="offset-1">SHARE:</li>
                           <li>
 
-                            <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://zanehuggins.github.io/Burns-Scalo-6/press-article-1.html&title=Corridors%2C+of%2C+Opportunity:%2C+What's%2C+next%2C+for%2C+the%2C+Strip%2C+District?&source=Burns-Scalo">
+                            <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://burnsscalorealestate.com/press-article-1.html&title=Corridors%2C+of%2C+Opportunity:%2C+What's%2C+next%2C+for%2C+the%2C+Strip%2C+District?&source=Burns-Scalo">
                               LinkedIn
                             </a>
 </li>
